--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ Start coding from here
         <h4>
         <mark class="header_enterpreneur">
         <i>
-        <sup><i class="fa fa quote-left"></i></sup>
+        <sup><i class="fa fa-quote-left"></i></sup>
             Reading is still the main way that I both learn new things and test my understanding.
         <sup><i class="fa fa-quote-right"></i></sup>
         </i>    
